--- a/baseline.ipynb
+++ b/baseline.ipynb
@@ -1595,9 +1595,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "quickdraw",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "quickdraw"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1609,7 +1609,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
